# LaserMapExplorer

./: --use-floating-images  .RData  .gitignore  .pylintrc  .zshrc  Browser.py  CLAUDE.md  CalculatorWindow.py  ColormapEditor.py  ImageProcessing.py  IsotopeSelectionDialog.py  IsotopeSelectionDialog.ui  LaME_Blockly_Handover_Guide.docx  LaME_blockly_design.docx  LaserMapExplorer.pyproject  LaserMapExplorer.pyproject.user.40c6b79  LaserMapExplorer.pyproject.user.5a885a9  LaserMapExplorer.pyproject.user.66ad50b  LaserMapExplorer.pyproject.user.7046fb4  LaserMapExplorer.pyproject.user.76eaaff  LaserMapExplorer.pyproject.user.e01341c  MainWindow.py  README.md  Update flow.docx  adjbyquantile.py  blockly.py  blueberry.py  calculator.py  classes_LaserMapExplorer.dot  classes_LaserMapExplorer.html  colormap_editor copy.py  colormap_editor.py  colormap_selector.py  config.py  dropper.py  excel_concatenator.py  install.md  issue_tracker.md  issue_tracker.txt  lame_helper.py  (+34 more)
docs/source/: Actions.rst  AnalyteSelectionWindow.rst  Browser.rst  Calculator.rst  CropImage.rst  CustomMplCanvas.rst  CustomTableWidget.rst  CustomWidgets.rst  DataHandling.rst  ExtendedDF.rst  ImageProcessing.rst  IsotopeSelectionDialog.rst  LameIO.rst  LaserMapExplorer.rst  LaserMapExplorer.src.rst  LaserMapExplorer.src.ui.rst  LaserMapExplorer.tests.rst  MapImporter.rst  MolecularWeightCalculator.rst  NoteTaking.rst  PlotTree.rst  Polygon.rst  Profile.rst  QuickView.rst  Regression.rst  SortAnalytes.rst  SpecialFunctions.rst  SpotImporter.rst  StyleToolbox.rst  TableFunctions.rst  UITheme.rst  app.rst  (+60 more)
(+413 files in other folders)
